--- a/espflash/Cargo.toml
+++ b/espflash/Cargo.toml
@@ -21,7 +21,7 @@ bytemuck = { version = "1", features = ["derive"] }
 indicatif = "0.16"
 md5 = "0.7"
 clap = { version = "3.0", features = ["derive"] }
-serialport = "4"
+serialport = { git = "https://gitlab.com/spookyvision1/serialport-rs", rev = "7816e282" }
 sha2 = "0.10"
 slip-codec = "0.3"
 thiserror = "1"
